Changelog:

8.30.13
Added confetti effect to GameOverState

8.29.13
Added animation for going back from team select to game mode select
Added new graphics for score and timer in gameplaystate
Changed cursor to full screen. Have option to slide cursor instead of teleporting it, but feels sluggish at moment.
Character portraits are cropped in 4:3 screen ratios, so they're less distorted
Added menu sounds
Added sounds for the start of a round
Added proper spawn locations for Tennis
Can't select both unlimited time and unlimited score anymore
The new score and timer bar for gameplaystate will fade out if a player moves under it (fixed cam only) 
Bugfixes for TwoTouch and Neutron behaviour
MenuPauseState shell added

8.28.13
Added Game Start animation
Added graphics for mode select and team select

8.27.13
Added many graphics to character select screen

8.26.13
Fixed goal scoring to make sure proper team score gets incremented
Fixed gameplaystate to now take data values rather than config values
Fullscreen now takes native height and width rather than resolution settings
Implemented resolution list rather than user incrementing height and width
Got rid of "Terrible terrible things" (see 8.24.13)!!!!! :)
Controller buttons now work on button press instead of button down
Controllers now take D-Pad input in menus, also working on button press
Fixed bug where dropping out players would override other players when signing back in
Gamemode Setup menu now displays "Unlimited" properly when choosing to have no time/score limit
Bug fixes, mostly related to Back and Neutron
Player select screen icons added

8.25.13
PlayerNeo now slows game timer

8.24.13
PlayerSetupMenu, GamemodeSetupMenu, TeamSetupMenu now all are functional and have prototyped UI.
Gameplaystate now is initialized based on data set in GlobalData from the setup menus.
Terrible terrible things have happened, need to fix soon or we'll forget and the world will end. See Todo.