@@ -2,6 +2,7 @@ Changelog:
 
 8.30.13
 Added confetti effect to GameOverState
+GameOverState now draws the players on each team, and also has them in the correct colour
 
 8.29.13
 Added animation for going back from team select to game mode select
